# catering-service

./: .gitignore  README.md  database.sqlite3  pyproject.toml
app/: settings.py
app/api/v1/: main_router.py
app/application/: orm.py
app/domain/: entities.py  exception.py  rules.py  value_objects.py
app/infrastructure/: database.py
envs/: .dev.env
migrations/: env.py
migrations/versions/: ebfbbe065d12_initial.py
scripts/: linter.sh
